---------------------------------------------------------------------------
Version 1.10.0 (RGer), 2005-09-??
  REMINDER: 1.10 is the first unstable version if the 1.x series!
- changed stringbuf into a new counted string class
---------------------------------------------------------------------------
Version 1.0.0 (RGer), 2005-09-12
- changed install doc to cover daily cron scripts - a trouble source
- added rc script for slackware (provided by Chris Elvidge - thanks!) 
- fixed a really minor bug in usage() - the -r option was still
  reported as without the port parameter
---------------------------------------------------------------------------
Version 0.9.8 (RGer), 2005-09-05
- made startup and shutdown message more consistent and included the
  pid, so that they can be easier correlated. Used syslog-protocol
  structured data format for this purpose.
- improved config info in startup message, now tells not only
  if it is listening remote on udp, but also for tcp. Also includes
  the port numbers. The previous startup message was misleading, because
  it did not say "remote reception" if rsyslogd was only listening via
  tcp (but not via udp).
- added a "how can you help" document to the doc set
---------------------------------------------------------------------------
Version 0.9.7 (RGer), 2005-08-15
- some of the previous doc files (like INSTALL) did not properly
  reflect the changes to the build process and the new doc. Fixed
  that.
- changed syslogd.c so that when compiled without database support,
  an error message is displayed when a database action is detected
  in the config file (previously this was used as an user rule ;))
- fixed a bug in the os-specific Makefiles which caused MySQL
  support to not be compiled, even if selected
---------------------------------------------------------------------------
Version 0.9.6 (RGer), 2005-08-09
- greatly enhanced documentation. Now available in html format in